Testando alterações para ver se a pipeline funciona

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Generate Sonar Coverage Report
         run: |
-          reportgenerator -reports:**/coverage.cobertura.xml -targetdir:coverage-report -reporttypes:SonarQube
+          reportgenerator -reports:"**/coverage.cobertura.xml" -targetdir:coverage-report -reporttypes:SonarQube
 
       - name: End SonarCloud Analysis
         run: dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
