--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,10 @@ jobs:
       - name: Run Tests with Coverage
         run: dotnet test --collect:"XPlat Code Coverage"
 
+      - name: Debug: Find Coverage Report
+        run: find . -name "coverage.cobertura.xml"
+
+
       - name: Generate Sonar Coverage Report
         run: |
           reportgenerator -reports:**/coverage.cobertura.xml -targetdir:coverage-report -reporttypes:SonarQube
